# android-logd-logger

./: Cargo.toml  README.md  release  rustfmt.toml
.cargo/: config  runner-aarch64-linux-android
.github/workflows/: ci.yaml
examples/: configuration.rs  events.rs  hello.rs
src/: configuration.rs  events.rs  lib.rs  log_configuration.rs  logd.rs  logger.rs  logging_iterator.rs  main.rs  pmsg.rs  thread.rs
