[package]
name = "logd-logger"
version = "0.1.0"
authors = ["Felix Obenhuber <felix.obenhuber@esrlabs.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/flxo/logd-logger"
homepage = "https://github.com/flxo/logd_logger"
keywords = [
    "adb",
    "android",
    "log",
    "logcat",
    "logger",
]

[dependencies]
env_logger = { version = "0.8.2", features = ["regex"], default-features = false }
log = { version = "0.4.11", features = ["std"] }
time = "0.2.23"
lazy_static = { version = "1.4.0", optional = true }

[target.'cfg(target_os = "android")'.dependencies]
bytes = "1.0.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2.81"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["processthreadsapi"] }

[target.'cfg(target_os = "redox")'.dependencies]
redox_syscall = "0.2.1"

[features]
default = ["locked"]
tls = []
locked = ["lazy_static"]