[package]
name = "android-logd-logger"
version = "0.1.2"
authors = ["Felix Obenhuber <felix@obenhuber.de>", "Jens Waechtler <jens.waechtler@esrlabs.com>"]
description = "A logging implementation for `log` which directly writes to the Android logd daemon"
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/flxo/android-logd-logger"
homepage = "https://github.com/flxo/android-logd-logger"
documentation = "https://docs.rs/android-logd-logger"
keywords = [
    "adb",
    "android",
    "log",
    "logcat",
    "logger",
]

[dependencies]
bytes = "1"
env_logger = { version = "0.8.3", features = ["regex"], default-features = false }
lazy_static = { version = "1", optional = true }
log = { version = "0.4.14", features = ["std"] }
thiserror = "1"
time = "0.2.25"

[target.'cfg(unix)'.dependencies]
libc = "0.2.87"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["processthreadsapi"] }

[target.'cfg(target_os = "redox")'.dependencies]
redox_syscall = "0.2.5"

[features]
default = ["lazy_static"]
tls = []
