[package]
name = "android-logd-logger"
version = "0.3.3"
authors = [
    "Felix Obenhuber <felix@obenhuber.de>",
    "Jens Waechtler <jens.waechtler@esrlabs.com>",
]
description = "A logging implementation for `log` which directly writes to the Android logd daemon"
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/flxo/android-logd-logger"
homepage = "https://github.com/flxo/android-logd-logger"
documentation = "https://docs.rs/android-logd-logger"
keywords = ["adb", "android", "log", "logcat", "logger"]

[dependencies]
bytes = "1"
env_logger = { version = "0.10", features = [
    "regex",
], default-features = false }
lazy_static = { version = "1.4", optional = true }
log = { version = "0.4", features = ["std"] }
parking_lot = "0.12"
thiserror = "1"
time = { version = "0.3", features = ["formatting"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.139"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["processthreadsapi"] }

[target.'cfg(target_os = "redox")'.dependencies]
redox_syscall = "0.3.4"

[features]
default = ["lazy_static"]

[dev-dependencies]
tempfile = "3.3.0"
